# c2rust_agent

./: .gitignore  Cargo.toml  DockerUsage.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  MIGRATION_TO_RIG.md  README-CN.md  README.md  RELATION_ANALYSIS.md  TWO_STAGE_TRANSLATION.md  USAGE_GUIDE.md  config.toml  data.db  docker-compose.yml  llm_requester.long-type-10646210749789516699.txt  main.py  pyproject.toml  run.py  run_tests.py
.github/workflows/: auto-release.yml  rust_checker.yml  rust_command.yml  rust_ui.yml
config/: config.default.toml  config.json  config.toml  docker.config.toml
config/prompts/: file_conversion.md  function_conversion.md  linus_role.md  search_result.md  web_search.md
crates/agent/: Cargo.toml  README.md
crates/agent/examples/: agent_demo.rs
crates/agent/src/: agent.rs  lib.rs
crates/commandline_tool/: Cargo.toml
crates/commandline_tool/src/: lib.rs  main.rs
crates/cproject_analy/: Cargo.toml
crates/cproject_analy/src/: file_remanager.rs  lib.rs  pkg_config.rs
crates/crates/db_services/src/: qdrant_services.rs
crates/crates/file_scanner/: Cargo.toml
crates/crates/llm_requester/: Cargo.toml
crates/crates/llm_requester/src/: agent_factory.rs  llm_factory.rs
crates/crates/prompt_builder/: Cargo.toml
crates/db_services/: Cargo.toml  c2rust_metadata.db
crates/db_services/src/: lib.rs  pkg_config.rs  qdrant_services.rs  sqlite_services.rs
crates/env_checker/: Cargo.toml
crates/env_checker/src/: ai_checker.rs  cfg_checker.rs  env_checker.rs  lib.rs
crates/file_editor/: Cargo.toml  README.md
crates/file_editor/examples/: basic_usage.rs  chibicc_analysis.rs
crates/file_editor/src/: content_parser.rs  file_ops.rs  lib.rs  line_ops.rs  manager.rs  project_detector.rs
crates/llm_requester/: Cargo.toml
crates/llm_requester/examples/: rig_test.rs  test_providers.rs
crates/llm_requester/src/: agent_factory.rs  deepseek_provider.rs  lib.rs  llm_factory.rs  llm_provider.rs  llm_provider_trait.rs  ollama_provider.rs  openai_provider.rs  pkg_config.rs  search.rs  xai_provider.rs
crates/llm_requester/src/utils/: mod.rs  token_counter.rs
crates/lsp_services/: Cargo.toml
crates/lsp_services/src/: lib.rs  lsp_services.rs
crates/main_processor/: Cargo.toml
crates/main_processor/examples/: complete_translation_example.rs  test_two_stage_translation.rs  translate_workflow.rs
crates/main_processor/src/: lib.rs  pkg_config.rs  processor.rs  single_process.rs  translation_api.rs
crates/main_processor/src/translation/: mod.rs  prompt.rs  templates.rs
crates/module_installer/: Cargo.toml
crates/module_installer/src/: lib.rs
crates/my-project/: Cargo.toml
crates/my-project/src/: lib.rs  main.rs
crates/project_remanager/: Cargo.toml  README.md
crates/project_remanager/examples/: reorganize_example.rs
crates/project_remanager/src/: lib.rs  main.rs
crates/prompt_builder/: Cargo.toml  c2rust_metadata.db
crates/prompt_builder/src/: call_relation.rs  formatter.rs  lib.rs  prompt_loader.rs  query.rs  types.rs
crates/relation_analy/: Cargo.toml
crates/relation_analy/examples/: relation_analyzer.rs
crates/relation_analy/src/: lib.rs
crates/rust_checker/: Cargo.toml
crates/rust_checker/examples/: checker.rs
crates/rust_checker/src/: lib.rs
crates/single_processor/: Cargo.toml
crates/single_processor/src/: ai_optimizer.rs  c2rust_translator.rs  code_splitter.rs  file_processor.rs  lib.rs  pkg_config.rs  rust_verifier.rs  single_processes.rs
crates/single_processor/tests/: json_extraction_tests.rs  mod.rs
crates/transpile/: Cargo.toml
crates/ui_main/: Cargo.toml  Dioxus.toml  build.rs
crates/ui_main/assets/: main.css  start.css
crates/ui_main/src/: app.slint  main.rs  main_.rs  on_off.txt  start_tab.rs
crates/web_searcher/: Cargo.toml  README.md
crates/web_searcher/examples/: basic_usage.rs  complete_workflow.rs  unified_interface.rs
crates/web_searcher/src/: lib.rs  page_fetch.rs  searcher.rs
docs/: 202509.key  CHUNKING.md
examples/: call_relation_example.py  preprocess_example_usage.py  preprocessor_example_usage.py
hot_dog/: Cargo.toml  README.md  prompt-small.md  prompt.md
scripts/: build_command_chibicc.sh  build_command_littlelefs.sh  codegen_command_chibicc.sh  codegen_command_littlelefs.sh
src/: __init__.py  lib.rs  main.rs  start_tab.rs
src/base/: Base.py  EventManager.py  __init__.py
src/modules/AgentServer/: ConvertService.py  ResponseAnalysis.py  RustCodeCheck.py
src/modules/DatebaseServer/: DatabaseManager.py  QdrantServer.py  SQLiteServer.py  __init__.py
src/modules/FileParsing/: FileScanner.py  LSPServices.py
src/modules/LLMRequester/: AmazonbedrockRequester.py  AnthropicRequester.py  CohereRequester.py  DashscopeRequester.py  GoogleRequester.py  LLMClientFactory.py  LLMRequester.py  LocalLLMRequester.py  OpenaiRequester.py  SakuraRequester.py  __init__.py
src/modules/Preprocessing/: CProjectPreprocessor.py  CallRelationAnalyzer.py  PreProcessor.py  SaveIntoDB.py  benchmark.py
src/utils/: relation_query_tool.py
test-projects/: .gitignore  Dockerfile  README.md  problem.example.toml
test-projects/translate_chibicc/: INFO  relation_graph.json
test-projects/translate_chibicc/src/: .gitignore
test-projects/translate_chibicc/tests/inputs/: utf8decoder.c
test-projects/translate_littlefs_fuse/: INFO  generate_compilation_database
test-projects/translate_littlefs_fuse/tests/: format  mount  prepare  umount  write
tests/: test_convert_service.py  test_database.py  test_database_simple.py  test_llm_config.py  test_llm_requesters.py  test_preprocessor.py  test_preprocessor_offline.py  test_preprocessor_quick.py  test_preprocessor_simple.py  test_real_project.py  test_relations.db  test_relations.py
