[workspace]
members = [
    "crates/agent",
    "crates/commandline_tool",
    "crates/cproject_analy",
    "crates/db_services",
    "crates/env_checker", "crates/file_editor",
    "crates/llm_requester",
    "crates/lsp_services",
    "crates/main_processor",
    "crates/project_remanager",
    "crates/prompt_builder",
    "crates/relation_analy",
    "crates/rust_checker",
    "crates/single_processor",
    "crates/ui_main", "crates/web_searcher",
]
resolver = "3"
default-members = ["crates/commandline_tool"]



[workspace.dependencies]
anyhow = "1.0.99"
log = "0.4.27"
tempfile = "3.8"
