[project]
name = "c2rust-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.62.0",
    "boto3>=1.40.5",
    "clangd>=20.1.8",
    "cohere>=5.16.2",
    "compiledb>=0.10.7",
    "dashscope>=1.24.1",
    "fastembed>=0.7.1",
    "google-genai>=1.29.0",
    "httpx[http2]>=0.28.1",
    "openai>=1.99.4",
    "psutil>=7.0.0",
    "pytest>=8.4.1",
    "qdrant-client>=1.15.1",
    "tqdm>=4.67.1",
]
