[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
llm_requester = { path = "../llm_requester" }
db_services = { path = "../db_services" }
file_editor = { path = "../file_editor" }
web_searcher = { path = "../web_searcher" }
prompt_builder = { path = "../prompt_builder" }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
tempfile = "3.2"
env_logger = "0.10"

[[example]]
name = "agent_demo"
required-features = []
