[package]
name = "commandline_tool"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
anyhow = "1.0.98"
tokio = { version = "1.0", features = ["rt", "macros", "sync", "time"] }
env_logger = "0.11.8"
log = "0.4.27"
walkdir = "2.4"

lsp_services = {path = "../lsp_services"}
cproject_analy = {path = "../cproject_analy"}
db_services = {path = "../db_services"}
llm_requester = {path = "../llm_requester"}
main_processor = {path = "../main_processor"}
prompt_builder = {path = "../prompt_builder"}
env_checker = {path = "../env_checker"}
file_scanner = {path = "../file_scanner"}
single_processor = {path = "../single_processor"}

