[package]
name = "cproject_analy"
version = "0.1.0"
edition = "2024"

[dependencies]
db_services = { path = "../db_services" }
llm_requester = { path = "../llm_requester" }
lsp_services = { path = "../lsp_services" }
prompt_builder = { path = "../prompt_builder" }

anyhow = "1.0.99"
chrono = "0.4.41"
glob = "0.3.3"
indicatif = "0.18.0"
num_cpus = "1.17.0"
rayon = "1.10.0"
regex = "1.11.1"
serde = "1.0.219"
serde_json = "1.0.142"
walkdir = "2.5.0"
