[package]
name = "db_services"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
qdrant-client = "1.15.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.25.0"
rusqlite = { version = "0.32.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.0", features = ["rt", "macros", "sync", "time"] }
uuid = { version = "1.0", features = ["v4"] }
config = "0.15.13"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros", "rt-multi-thread"] }
