[package]
name = "env_checker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
log = "0.4.27"
tokio = { version = "1.0", features = ["rt", "macros", "sync", "time"] }


db_services = { path = "../db_services" }
llm_requester = { path = "../llm_requester" }
config = "0.15.14"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.12"
