[package]
name = "file_editor"
version = "0.1.0"
edition = "2021"
authors = ["C2Rust Agent Team"]
description = "Rust project file management and manipulation utilities"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
regex = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.0"
