[package]
name = "llm_requester"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
config = "0.15.13"
duckduckgo_search = "0.1.3"
env_logger = "0.11"
log = "0.4.27"
reqwest = "0.12.23"
serde = "1.0.219"
serial_test = "3.2.0"
siumai = {git = "https://github.com/YumchaLabs/siumai.git"}
tokio = { version = "1.47.1", features = ["full"] }
