[package]
name = "main_processor"
version = "0.1.0"
edition = "2021"

[dependencies]
llm_requester = { path = "../llm_requester" }
prompt_builder = { path = "../prompt_builder" }
rust_checker = { path = "../rust_checker" }
db_services = { path = "../db_services" }
env_checker = { path = "../env_checker" }
single_processor = { path = "../single_processor" }
relation_analy = { path = "../relation_analy" }

anyhow = "1.0"
indicatif = { version = "0.18.0", features = ["in_memory"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
config = "0.15.14"
tracing = "0.1"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3.0"
