[package]
name = "prompt_builder"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
db_services = { path = "../db_services" }
log = "0.4.27"
lsp_services = { path = "../lsp_services" }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"

[dev-dependencies]
tempfile = "3.0"
