[package]
name = "single_processor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
log = "0.4.28"
tokio = "1.47.1"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

db_services = { path = "../db_services" }
llm_requester = { path = "../llm_requester" }
prompt_builder = { path = "../prompt_builder" }

