[package]
name = "single_processor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
log = "0.4.28"
tokio = "1.47.1"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
config = "0.15.18"

db_services = { path = "../db_services" }
llm_requester = { path = "../llm_requester" }
prompt_builder = { path = "../prompt_builder" }
rust_checker = { path = "../rust_checker" }
file_editor = { path = "../file_editor" }
agent = { path = "../agent" }

[dev-dependencies]
tempfile = "3.8"
