[package]
name = "ui_main"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { path = "D:\\work_soft\\dioxus\\packages\\dioxus", features = ["web"] }
dioxus-web = { version = "0.6.3" }  

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
