[package]
name = "ui_main"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = { version = "1.13", default-features = false, features = ["backend-winit", "renderer-femtovg", "compat-1-2"] }
commandline_tool = { path = "../commandline_tool" }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "time"] }
anyhow = "1.0"

[build-dependencies]
slint-build = "1.13"

[features]
default = []
