[package]
name = "web_searcher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
llm_requester = { path = "../llm_requester" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
config = "0.13"
urlencoding = "2.1"
regex = "1.10"
scraper = "0.17"

[dev-dependencies]
tokio-test = "0.4"
env_logger = "0.10"

[[example]]
name = "basic_usage"
required-features = []

[[example]]
name = "complete_workflow"
required-features = []

[[example]]
name = "unified_interface"
required-features = []
